<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginTop="63dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imb_power"
                style="@style/ImageButtonStyle"
                android:src="@drawable/power_seletor" />

            <TextView
                android:id="@+id/power"
                style="@style/TextTheme"
                android:text="@string/power" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imb_vol_minus"
                style="@style/ImageButtonStyle"
                android:src="@drawable/vol_minus_seletor" />

            <TextView
                android:id="@+id/vol_m"
                style="@style/TextTheme"
                android:text="@string/vol_minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imb_vol_plus"
                style="@style/ImageButtonStyle"
                android:src="@drawable/vol_plus_seletor" />

            <TextView
                android:id="@+id/vol_p"
                style="@style/TextTheme"
                android:text="@string/vol_plus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ch_minus"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imb_channel_minus"
                style="@style/ImageButtonStyle"
                android:src="@drawable/channel_minus_seletor" />

            <TextView
                android:id="@+id/ch_m"
                style="@style/TextTheme"
                android:text="@string/ch_minus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ch_plus"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imb_channel_plus"
                android:src="@drawable/channel_plus_seletor"
                style="@style/ImageButtonStyle"
                 />

            <TextView
                android:id="@+id/ch_p"
                style="@style/TextTheme"
                android:text="@string/ch_plus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_input"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imb_input"
                style="@style/ImageButtonStyle"
                android:src="@drawable/input_seltor" />
            <TextView
                android:id="@+id/input"
                android:text="@string/input"
                style="@style/TextTheme" />
        </LinearLayout>
    </LinearLayout>
</merge>
